--- a/src/assets/lang/en/dev_lines.txt
+++ b/src/assets/lang/en/dev_lines.txt
@@ -42,5 +42,9 @@ HERE WE GO!
 Max, Yuki and Emmanuel are all into their X forms inside a\nmassive robot!
 The turbo lasers are amazing!
 The world just moved an inch.
-You can't survive them all at once!
-One at a time. Not three at a time!
+The Developers are just too good.\nYou can't survive them all at once!
+One Developer at a time. Not three Developers at a time!
+Max is thrashing you with coding!
+Yuki is thrashing you with cubing and geography!
+Emmanuel is thrashing you with coolness!
+The robot is thrashing you with batteries!
