--- a/src/assets/lang/en/dev_lines.txt
+++ b/src/assets/lang/en/dev_lines.txt
@@ -15,7 +15,7 @@ Yuki transformed into Yuki X!\nHis attacks will be much more powerful.
 The amount of rage is INFINITY.
 He can now solve any puzzle.
 Chaos
-Yuki's cubing time is much higher than yours.\nYou feel intimidated.\nConfidence went down by 2!
+Yuki's cubing time is much faster than yours.\nYou feel intimidated.\nConfidence went down by 2!
 The RUBIK'S BOMB was prepared for YOU.
 You successfully survived Developer Yuki!
 What?\You survived Yuki?\nSomeone as pathetic as you couldn't do that.
